scripts/k8s/01-users.yml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  ports:
    - port: 3000
      name: http
      protocol: TCP
  selector:
    app: users
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: users
        version: 0.0.1
    spec:
      containers:
        - name: users
          image: users:0.0.1
          imagePullPolicy: Never
          ports:
            # pura documentação (caráter informativo), igual o EXPOSE do Dockerfile
            - containerPort: 3000
              protocol: TCP
  selector:
    matchLabels:
      app: users
