scripts/k8s/03-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-route
spec:
  hosts:
    - "*"
  gateways:
    - workshop-gateway
  http:
    - match:
        - uri:
            exact: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 3000
    - match:
        - uri:
            exact: /posts
      route:
        - destination:
            host: posts-service
            port:
              number: 3000
      timeout: 3s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
    - match:
        - uri:
            exact: /users
      route:
        - destination:
            host: users-service
            port:
              number: 3000
    - match:
        - uri:
            exact: /composition
      route:
        - destination:
            host: composition-service
            port:
              number: 3000
      rewrite:
        uri: '/'
