scripts/k8s/05-circuit-breaker.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: users-service
spec:
  host: users-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
      maxEjectionPercent: 100
